--- a/06passwordgenerator/src/index.css
+++ b/06passwordgenerator/src/index.css
@@ -37,7 +37,9 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+    border-radius: 8px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
